v1.21 | added font-display: swap to avoid invisible text in browser

--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,7 @@ summary {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/raleway-v22-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"), url("../fonts/raleway-v22-latin_cyrillic-700.woff2") format("woff2"), url("../fonts/raleway-v22-latin_cyrillic-700.woff") format("woff"), url("../fonts/raleway-v22-latin_cyrillic-700.ttf") format("truetype"), url("../fonts/raleway-v22-latin_cyrillic-700.svg#Raleway") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* roboto-regular - latin_cyrillic */
@@ -279,6 +280,7 @@ summary {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/roboto-v29-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-v29-latin_cyrillic-regular.woff2") format("woff2"), url("../fonts/roboto-v29-latin_cyrillic-regular.woff") format("woff"), url("../fonts/roboto-v29-latin_cyrillic-regular.ttf") format("truetype"), url("../fonts/roboto-v29-latin_cyrillic-regular.svg#Roboto") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* roboto-500 - latin_cyrillic */
@@ -290,6 +292,7 @@ summary {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/roboto-v29-latin_cyrillic-500.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-v29-latin_cyrillic-500.woff2") format("woff2"), url("../fonts/roboto-v29-latin_cyrillic-500.woff") format("woff"), url("../fonts/roboto-v29-latin_cyrillic-500.ttf") format("truetype"), url("../fonts/roboto-v29-latin_cyrillic-500.svg#Roboto") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 /* roboto-700 - latin_cyrillic */
@@ -301,6 +304,7 @@ summary {
   /* IE9 Compat Modes */
   src: local(""), url("../fonts/roboto-v29-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"), url("../fonts/roboto-v29-latin_cyrillic-700.woff2") format("woff2"), url("../fonts/roboto-v29-latin_cyrillic-700.woff") format("woff"), url("../fonts/roboto-v29-latin_cyrillic-700.ttf") format("truetype"), url("../fonts/roboto-v29-latin_cyrillic-700.svg#Roboto") format("svg");
   /* Legacy iOS */
+  font-display: swap;
 }
 
 :root {
