--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -15,6 +15,7 @@
       format('truetype'),
     /* Safari, Android, iOS */
       url('../fonts/raleway-v22-latin_cyrillic-700.svg#Raleway') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* roboto-regular - latin_cyrillic */
 @font-face {
@@ -33,6 +34,7 @@
       format('truetype'),
     /* Safari, Android, iOS */
       url('../fonts/roboto-v29-latin_cyrillic-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* roboto-500 - latin_cyrillic */
 @font-face {
@@ -51,6 +53,7 @@
       format('truetype'),
     /* Safari, Android, iOS */
       url('../fonts/roboto-v29-latin_cyrillic-500.svg#Roboto') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* roboto-700 - latin_cyrillic */
 @font-face {
@@ -69,4 +72,5 @@
       format('truetype'),
     /* Safari, Android, iOS */
       url('../fonts/roboto-v29-latin_cyrillic-700.svg#Roboto') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
